# rust-virtual-kubelet-adapter

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  provider.rs  routes.rs  server.rs  types.rs  utils.rs
src/routes/: create_pod.rs  default.rs  mod.rs  update_pod.rs
