[package]
name = "virtual-kubelet-adapter"
version = "0.1.0"
description = "Kubernetes virtual kubelet adapter for Rust"
readme = "README.md"
repository = "https://github.com/avranju/rust-virtual-kubelet-adapter"
license = "MIT"
authors = ["Rajasekharan Vengalil <avranju@gmail.com>"]

[lib]
name = "virtual_kubelet_adapter"
path = "src/lib.rs"

[dependencies]
iron = "0.6.0"
router = "0.6.0"
bodyparser = "0.8.0"
serde = "1.0.26"
serde_json = "1.0.8"
persistent = "0.4.0"
num = "0.1.41"
url = "1.6"
kube_rust = { git = "https://github.com/avranju/kube-rust", rev = "c6fc5cead652a0ba9f899c3bf28ebd89f98c7887" }
